<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lId"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn1"
            style="@style/ButtonPINNumber"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:tag="@string/btn1Tag"
            android:text="@string/btn1Text"
            android:textSize="@dimen/btnPinNumberSize" />

        <Button
            android:id="@+id/btn2"
            style="@style/ButtonPINNumber"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:tag="@string/btn2Tag"
            android:text="@string/btn2Text"
            android:textSize="@dimen/btnPinNumberSize" />

        <Button
            android:id="@+id/btn3"
            style="@style/ButtonPINNumber"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:tag="@string/btn3Tag"
            android:text="@string/btn3Text"
            android:textSize="@dimen/btnPinNumberSize" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn4"
            style="@style/ButtonPINNumber"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:tag="@string/btn4Tag"
            android:text="@string/btn4Text"
            android:textSize="@dimen/btnPinNumberSize" />

        <Button
            android:id="@+id/btn5"
            style="@style/ButtonPINNumber"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:tag="@string/btn5Tag"
            android:text="@string/btn5Text"
            android:textSize="@dimen/btnPinNumberSize" />

        <Button
            android:id="@+id/btn6"
            style="@style/ButtonPINNumber"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:tag="@string/btn6Tag"
            android:text="@string/btn6Text"
            android:textSize="@dimen/btnPinNumberSize" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn7"
            style="@style/ButtonPINNumber"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:tag="@string/btn7Tag"
            android:text="@string/btn7Text"
            android:textSize="@dimen/btnPinNumberSize" />

        <Button
            android:id="@+id/btn8"
            style="@style/ButtonPINNumber"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:tag="@string/btn8Tag"
            android:text="@string/btn8Text"
            android:textSize="@dimen/btnPinNumberSize" />

        <Button
            android:id="@+id/btn9"
            style="@style/ButtonPINNumber"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:tag="@string/btn9Tag"
            android:text="@string/btn9Text"
            android:textSize="@dimen/btnPinNumberSize" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/pin_cancel"
            android:tag="@string/btnCancelTag"
            android:text="@string/btnCancelText"
            android:textSize="@dimen/btnPinTextSize"
            android:theme="@style/ButtonPINCancel" />

        <Button
            android:id="@+id/btn0"
            style="@style/ButtonPINNumber"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:tag="@string/btn0Tag"
            android:text="@string/btn0Text"
            android:textSize="@dimen/btnPinNumberSize" />

        <Button
            android:id="@+id/btnClear"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/pin_clear"
            android:tag="@string/btnClearTag"
            android:text="@string/btnClearText"
            android:textSize="@dimen/btnPinTextSize"
            android:theme="@style/ButtonPINClear" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnConfirm"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/pin_confirm"
            android:tag="@string/btnConfirmTag"
            android:text="@string/btnConfirmText"
            android:textSize="@dimen/btnPinTextSize"
            android:theme="@style/ButtonPINConfirm" />

    </LinearLayout>
</LinearLayout>